--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "\"Query Hummingbird.me info from slack\"",
   "main": "main.js",
   "scripts": {
-    "start": "babel src --out-dir build && node build/main.js"
+    "start": "npm run build && node build/main.js",
+    "clean": "rm -rf build && mkdir build",
+    "build-server": "babel src -d build -s",
+    "build": "npm run clean && npm run build-server"
   },
   "repository": {
     "type": "git",
@@ -16,7 +19,7 @@
     "url": "https://github.com/matthewdias/hbslackbot/issues"
   },
   "homepage": "https://github.com/matthewdias/hbslackbot#readme",
-  "devDependencies": {
+  "dependencies": {
     "babel-cli": "^6.10.1",
     "babel-core": "^6.10.4",
     "babel-preset-es2015": "^6.9.0",
@@ -26,9 +29,7 @@
     "koa-cors": "0.0.16",
     "koa-router": "^7.0.1",
     "superagent": "^2.0.0",
-    "superagent-jsonapify": "^1.4.1"
-  },
-  "dependencies": {
+    "superagent-jsonapify": "^1.4.1",
     "babel-polyfill": "^6.9.1"
   }
 }
