--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hbslackbot",
   "version": "0.1.0",
-  "description": "\"Query Hummingbird.me info from slack\"",
+  "description": "Query Hummingbird.me info from slack",
   "main": "main.js",
   "scripts": {
     "start": "npm run build && node build/main.js",
@@ -22,14 +22,14 @@
   "dependencies": {
     "babel-cli": "^6.10.1",
     "babel-core": "^6.10.4",
+    "babel-polyfill": "^6.9.1",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-stage-0": "^6.5.0",
     "koa": "^2.0.0",
-    "koa-body": "^1.4.0",
+    "koa-bodyparser": "^2.2.0",
     "koa-cors": "0.0.16",
     "koa-router": "^7.0.1",
     "superagent": "^2.0.0",
-    "superagent-jsonapify": "^1.4.1",
-    "babel-polyfill": "^6.9.1"
+    "superagent-jsonapify": "^1.4.1"
   }
 }
