--- a/package.json
+++ b/package.json
@@ -28,9 +28,10 @@
     "client-oauth2": "^3.2.0",
     "devour-client": "^1.4.0",
     "koa": "^2.0.0",
-    "koa-bodyparser": "^2.2.0",
+    "koa-bodyparser": "^3.2.0",
     "koa-cors": "0.0.16",
     "koa-router": "^7.0.1",
+    "moment": "^2.17.0",
     "mysql": "^2.11.1",
     "pg": "^6.0.2",
     "sequelize": "^3.23.4",
