--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "koa-bodyparser": "^3.2.0",
     "koa-cors": "0.0.16",
     "koa-router": "^7.0.1",
+    "koa-static": "^2.0.0",
     "moment": "^2.17.0",
     "mysql": "^2.11.1",
     "pg": "^6.0.2",
