--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
     "koa": "^2.0.0",
     "koa-bodyparser": "^3.2.0",
     "koa-cors": "0.0.16",
+    "koa-ratelimit": "^2.4.0",
     "koa-router": "^7.0.1",
     "koa-static": "^2.0.0",
     "moment": "^2.17.0",
     "mysql": "^2.11.1",
+    "node-fetch": "^1.6.3",
     "pg": "^6.0.2",
-    "sequelize": "^3.23.4",
-    "superagent": "^3.1.0"
+    "redis": "^2.6.3",
+    "sequelize": "^3.23.4"
   }
 }
