--- a/package.json
+++ b/package.json
@@ -3,12 +3,6 @@
   "version": "1.0.0",
   "description": "Query Kitsu.io from slack",
   "main": "main.js",
-  "scripts": {
-    "start": "npm run build && node build/main.js",
-    "clean": "rm -rf build && mkdir build",
-    "build-server": "babel src -d build -s; cp -r static build",
-    "build": "npm run clean && npm run build-server"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/matthewdias/kitsu-slack.git"
@@ -19,23 +13,29 @@
     "url": "https://github.com/matthewdias/kitsu-slack/issues"
   },
   "homepage": "https://github.com/matthewdias/kitsu-slack#readme",
+  "scripts": {
+    "start": "npm run build && node build/main.js",
+    "clean": "rm -rf build && mkdir build",
+    "build-server": "babel src -d build -s; cp -r static build",
+    "build": "npm run clean && npm run build-server"
+  },
+  "engines": { "node": "7.8.0" },
   "dependencies": {
     "@slack/client": "^3.9.0",
-    "babel-cli": "^6.10.1",
-    "babel-core": "^6.10.4",
-    "babel-polyfill": "^6.9.1",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "client-oauth2": "^3.2.0",
-    "devour-client": "^1.4.0",
-    "koa": "^2.0.0",
-    "koa-bodyparser": "^3.2.0",
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.24.1",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-env": "^1.4.0",
+    "client-oauth2": "^4.1.0",
+    "devour-client": "^1.4.1",
+    "koa": "^2.2.0",
+    "koa-bodyparser": "^4.2.0",
     "koa-cors": "0.0.16",
-    "koa-ratelimit": "^2.4.0",
-    "koa-router": "^7.0.1",
-    "koa-static": "^2.0.0",
-    "moment": "^2.17.0",
-    "mysql": "^2.11.1",
+    "koa-ratelimit": "^4.0.0",
+    "koa-router": "^7.1.1",
+    "koa-static": "^3.0.0",
+    "moment": "^2.18.1",
+    "mysql": "^2.13.0",
     "node-fetch": "^1.6.3",
     "pg": "^6.0.2",
     "redis": "^2.6.3",
