--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
     "build-server": "babel src -d build -s; cp -r static build",
     "build": "npm run clean && npm run build-server"
   },
-  "engines": { "node": "7.8.0" },
+  "engines": {
+    "node": "7.8.0"
+  },
   "dependencies": {
     "@slack/client": "^3.9.0",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
     "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.4.0",
+    "chrome-remote-interface": "^0.22.0",
     "client-oauth2": "^4.1.0",
     "devour-client": "^1.4.1",
     "koa": "^2.2.0",
