--- a/app.json
+++ b/app.json
@@ -12,7 +12,7 @@
     { "url": "heroku/nodejs" },
     { "url": "https://github.com/heroku/heroku-buildpack-google-chrome" }
   ],
-  "stack": "cedar-14",
+  "stack": "heroku-18",
   "env": {
     "CLIENT": {
       "description": "Slack client id. Get one here https://api.slack.com/apps"
